1.Containers-VMs/1.3.Kubernetes/2.9/create_app.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    run: hello-pod
spec:
  containers:
    - name: hello-container
      image: crccheck/hello-world
      ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    run: hello-pod
