1.Containers-VMs/1.3.Kubernetes/2.9/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nnginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 80
